# notive

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  cliff.toml  package.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/benches/: config_bench.rs  handlers_bench.rs  settings_bench.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accounts/: mod.rs
src-tauri/src/ai/: mod.rs  tests.rs
src-tauri/src/analytics/: mod.rs  persistence.rs  tests.rs
src-tauri/src/app/: mod.rs  state.rs  tests.rs
src-tauri/src/autostart/: mod.rs  tests.rs
src-tauri/src/bookmarks/: mod.rs  persistence.rs  tests.rs
src-tauri/src/cache/: mod.rs  tests.rs
src-tauri/src/calendar/: mod.rs
src-tauri/src/commands/: app.rs  downloads.rs  mod.rs  notifications.rs  settings.rs  sync.rs  tests.rs  window.rs
src-tauri/src/config/: mod.rs  settings.rs  tests.rs
src-tauri/src/handlers/: mod.rs  navigation.rs  tests.rs  window.rs
src-tauri/src/history/: mod.rs  persistence.rs  tests.rs
src-tauri/src/monitor/: mod.rs  tests.rs
src-tauri/src/notifications/: customization.rs  mod.rs
src-tauri/src/notion_api/: mod.rs  tests.rs
src-tauri/src/oauth/: mod.rs  tests.rs
src-tauri/src/offline/: mod.rs  tests.rs
src-tauri/src/performance/: mod.rs  tests.rs
src-tauri/src/plugins/: mod.rs  tests.rs
src-tauri/src/privacy/: mod.rs
src-tauri/src/quickcapture/: mod.rs
src-tauri/src/search/: mod.rs  tests.rs
src-tauri/src/security/: mod.rs  token_storage.rs
src-tauri/src/sessions/: mod.rs  persistence.rs  tests.rs
src-tauri/src/shortcuts/: mod.rs  tests.rs
src-tauri/src/tabs/: mod.rs  persistence.rs
src-tauri/src/templates/: mod.rs  persistence.rs  tests.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/updater/: mod.rs  tests.rs
src-tauri/src/utils/: mod.rs  paths.rs  platform.rs  tests.rs
src-tauri/src/wayland/: mod.rs
src-tauri/tests/: bookmarks_integration_test.rs  history_integration_test.rs  integration_test.rs  memory_test.rs  stress_test.rs  theme_integration_test.rs  workspaces_integration_test.rs
(+94 files in other folders)
